# darknet2_ros

./: .gitignore  README.md
darknet2_ros/: CMakeLists.txt  package.xml
darknet2_ros/include/darknet2_ros/: YoloObjectDetector.h  YoloObjectDetector.h.BAK
darknet2_ros/launch/: darknet_ros.launch
darknet2_ros/src/: YoloObjectDetector.cpp  YoloObjectDetector.cpp.BAK  image_interface.c  object_detector_demo.cpp  yolo_object_detector_node.cpp
darknet2_ros/test/: ObjectDetection.cpp  object_detection.test  test_main.cpp
darknet2_ros_msgs/: CMakeLists.txt  package.xml
darknet2_ros_msgs/action/: CheckForObjects.action
