<?xml version="1.0"?>
<package format="2">
  <name>darknet2_ros</name>
  <version>0.1.0</version>
  <description>ROS package to use YOLO in ROS.</description>
  <maintainer email="marko.bjelonic@mavt.ethz.ch">Marko Bjelonic</maintainer>
  <license>MIT</license>
  <url type="marko.bjelonic@mavt.ethz.ch">https://bitbucket.org/ethz-asl-lr/darknet2_ros</url>
  <author email="marko.bjelonic@mavt.ethz.ch">Marko Bjelonic</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>opencv3</depend>
  <depend>image_transport</depend>
  <depend>cv3_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>darknet2_ros_msgs</depend>
  <depend>darknet_msgs</depend>
  <depend>actionlib</depend>
  
  <!-- Test dependencies -->
  <test_depend>rostest</test_depend>
</package>
